--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
         <p>Modi laboriosam non, aliquid expedita dolor illum blanditiis dignissimos mollitia, corrupti! Tempore, sint molestias! Explicabo dignissimos modi laboriosam nulla corporis eaque ratione ea deserunt, minima dolores praesentium amet tempora at laborum repellat quasi asperiores quae voluptatum fuga atque maxime nostrum doloribus optio earum? Numquam, tempore enim! Libero, natus! <a href="#">link test</a></p>
       </div>
     </div>
+    <h2>initial tabs set</h2>
+    <div class="flextabs flextabs--48em">
+      <h3 class="flextabs__tab"><button class="flextabs__toggle flextabs__toggle--active flextabs__toggle--active--last">Toggle</button></h3>
+      <div class="flextabs__content  flextabs__content--active flextabs__content--active--last">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, maiores, et? Facere eos sunt autem, libero porro eveniet architecto dignissimos officiis. A voluptate repellat adipisci placeat illum veniam commodi sequi quidem sint reiciendis quasi deleniti delectus quo natus quisquam modi optio unde doloribus, tempora, dolore? Doloremque, nam, laudantium. <a href="#">link test</a></p>
+      </div>
+      <h3 class="flextabs__tab"><button class="flextabs__toggle">Toggle</button></h3>
+      <div class="flextabs__content">
+        <p>Ut assumenda dolorem, veritatis accusamus eaque dicta, cupiditate, perferendis nemo corporis minima tenetur laboriosam iste impedit delectus quod. Qui facere ducimus soluta hic consequatur repellendus nostrum dolores animi architecto, cum vitae perferendis sunt quibusdam tempore veniam. Eaque rem deserunt earum ex odio soluta iste harum suscipit totam a. <a href="#">link test</a></p>
+      </div>
+      <h3 class="flextabs__tab"><button class="flextabs__toggle flextabs__toggle--active">Toggle</button></h3>
+      <div class="flextabs__content flextabs__content--active">
+        <p>Modi laboriosam non, aliquid expedita dolor illum blanditiis dignissimos mollitia, corrupti! Tempore, sint molestias! Explicabo dignissimos modi laboriosam nulla corporis eaque ratione ea deserunt, minima dolores praesentium amet tempora at laborum repellat quasi asperiores quae voluptatum fuga atque maxime nostrum doloribus optio earum? Numquam, tempore enim! Libero, natus! <a href="#">link test</a></p>
+      </div>
+    </div>
     <script src="index.js"></script>
     <script>
       var targets = document.querySelectorAll('.flextabs');
