--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </style>
   </head>
   <body>
-    <h1>flextabs</h1>
-    <h2>default</h2>
+    <h1>flextabs / <a href="https://github.com/mdmoreau/flextabs">github</a></h1>
+    <h2>default (accordion)</h2>
     <div class="flextabs">
       <h3 class="flextabs__tab"><button class="flextabs__toggle">Toggle</button></h3>
       <div class="flextabs__content">
@@ -47,7 +47,7 @@
         <p>Modi laboriosam non, aliquid expedita dolor illum blanditiis dignissimos mollitia, corrupti! Tempore, sint molestias! Explicabo dignissimos modi laboriosam nulla corporis eaque ratione ea deserunt, minima dolores praesentium amet tempora at laborum repellat quasi asperiores quae voluptatum fuga atque maxime nostrum doloribus optio earum? Numquam, tempore enim! Libero, natus! <a href="#">link test</a></p>
       </div>
     </div>
-    <h2>switch to tabs at 48em</h2>
+    <h2>tabs at 48em viewport width</h2>
     <div class="flextabs flextabs--48em">
       <h3 class="flextabs__tab"><button class="flextabs__toggle">Toggle</button></h3>
       <div class="flextabs__content">
