rename css and js files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title>flextabs</title>
-    <link href="index.css" rel="stylesheet">
+    <link href="flextabs.css" rel="stylesheet">
     <style>
       .flextabs__toggle--active {
         color: red;
@@ -77,7 +77,7 @@
         <p>Modi laboriosam non, aliquid expedita dolor illum blanditiis dignissimos mollitia, corrupti! Tempore, sint molestias! Explicabo dignissimos modi laboriosam nulla corporis eaque ratione ea deserunt, minima dolores praesentium amet tempora at laborum repellat quasi asperiores quae voluptatum fuga atque maxime nostrum doloribus optio earum? Numquam, tempore enim! Libero, natus! <a href="#">link test</a></p>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="flextabs.js"></script>
     <script>
       var targets = document.querySelectorAll('.flextabs');
       for (var i = 0; i < targets.length; i += 1) {
