minor refactor, demo update, edit readme

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
       .flextabs__toggle--active {
         color: red;
       }
-      @media (min-width: 48em) {
-        .flextabs--48em .flextabs__tab {
+      @media (min-width: 64em) {
+        .flextabs--64em .flextabs__tab {
           order: -1;
           width: auto;
         }
-        .flextabs--48em .flextabs__toggle--active {
+        .flextabs--64em .flextabs__toggle--active {
           color: inherit;
         }
-        .flextabs--48em .flextabs__toggle--active--last {
+        .flextabs--64em .flextabs__toggle--active--last {
           color: red;
         }
-        .flextabs--48em .flextabs__content--active {
+        .flextabs--64em .flextabs__content--active {
           display: none;
         }
-        .flextabs--48em .flextabs__content--active--last {
+        .flextabs--64em .flextabs__content--active--last {
           display: block;
         }
       }
@@ -32,7 +32,7 @@
   </head>
   <body>
     <h1>flextabs / <a href="https://github.com/mdmoreau/flextabs">github</a></h1>
-    <h2>default (accordion)</h2>
+    <h2>default multi toggle (accordion)</h2>
     <div class="flextabs">
       <h3 class="flextabs__tab"><button class="flextabs__toggle">Toggle</button></h3>
       <div class="flextabs__content">
@@ -47,8 +47,8 @@
         <p>Modi laboriosam non, aliquid expedita dolor illum blanditiis dignissimos mollitia, corrupti! Tempore, sint molestias! Explicabo dignissimos modi laboriosam nulla corporis eaque ratione ea deserunt, minima dolores praesentium amet tempora at laborum repellat quasi asperiores quae voluptatum fuga atque maxime nostrum doloribus optio earum? Numquam, tempore enim! Libero, natus! <a href="#">link test</a></p>
       </div>
     </div>
-    <h2>tabs at 48em viewport width</h2>
-    <div class="flextabs flextabs--48em">
+    <h2>single toggle (tabs) at 64em viewport width</h2>
+    <div class="flextabs flextabs--64em">
       <h3 class="flextabs__tab"><button class="flextabs__toggle">Toggle</button></h3>
       <div class="flextabs__content">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, maiores, et? Facere eos sunt autem, libero porro eveniet architecto dignissimos officiis. A voluptate repellat adipisci placeat illum veniam commodi sequi quidem sint reiciendis quasi deleniti delectus quo natus quisquam modi optio unde doloribus, tempora, dolore? Doloremque, nam, laudantium. <a href="#">link test</a></p>
@@ -62,18 +62,33 @@
         <p>Modi laboriosam non, aliquid expedita dolor illum blanditiis dignissimos mollitia, corrupti! Tempore, sint molestias! Explicabo dignissimos modi laboriosam nulla corporis eaque ratione ea deserunt, minima dolores praesentium amet tempora at laborum repellat quasi asperiores quae voluptatum fuga atque maxime nostrum doloribus optio earum? Numquam, tempore enim! Libero, natus! <a href="#">link test</a></p>
       </div>
     </div>
-    <h2>initial tabs set</h2>
-    <div class="flextabs flextabs--48em">
-      <h3 class="flextabs__tab"><button class="flextabs__toggle flextabs__toggle--active flextabs__toggle--active--last">Toggle</button></h3>
-      <div class="flextabs__content  flextabs__content--active flextabs__content--active--last">
+    <h2>set initial active tabs</h2>
+    <div class="flextabs flextabs--64em">
+      <h3 class="flextabs__tab"><button class="flextabs__toggle flextabs__toggle--active">Toggle</button></h3>
+      <div class="flextabs__content  flextabs__content--active">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, maiores, et? Facere eos sunt autem, libero porro eveniet architecto dignissimos officiis. A voluptate repellat adipisci placeat illum veniam commodi sequi quidem sint reiciendis quasi deleniti delectus quo natus quisquam modi optio unde doloribus, tempora, dolore? Doloremque, nam, laudantium. <a href="#">link test</a></p>
       </div>
-      <h3 class="flextabs__tab"><button class="flextabs__toggle">Toggle</button></h3>
-      <div class="flextabs__content">
+      <h3 class="flextabs__tab"><button class="flextabs__toggle flextabs__toggle--active--last">Toggle</button></h3>
+      <div class="flextabs__content flextabs__content--active--last">
         <p>Ut assumenda dolorem, veritatis accusamus eaque dicta, cupiditate, perferendis nemo corporis minima tenetur laboriosam iste impedit delectus quod. Qui facere ducimus soluta hic consequatur repellendus nostrum dolores animi architecto, cum vitae perferendis sunt quibusdam tempore veniam. Eaque rem deserunt earum ex odio soluta iste harum suscipit totam a. <a href="#">link test</a></p>
       </div>
       <h3 class="flextabs__tab"><button class="flextabs__toggle flextabs__toggle--active">Toggle</button></h3>
       <div class="flextabs__content flextabs__content--active">
+        <p>Modi laboriosam non, aliquid expedita dolor illum blanditiis dignissimos mollitia, corrupti! Tempore, sint molestias! Explicabo dignissimos modi laboriosam nulla corporis eaque ratione ea deserunt, minima dolores praesentium amet tempora at laborum repellat quasi asperiores quae voluptatum fuga atque maxime nostrum doloribus optio earum? Numquam, tempore enim! Libero, natus! <a href="#">link test</a></p>
+      </div>
+    </div>
+    <h2>tab/toggle variations</h2>
+    <div class="flextabs">
+      <h3 class="flextabs__tab"><button class="flextabs__toggle">Toggle</button></h3>
+      <div class="flextabs__content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, maiores, et? Facere eos sunt autem, libero porro eveniet architecto dignissimos officiis. A voluptate repellat adipisci placeat illum veniam commodi sequi quidem sint reiciendis quasi deleniti delectus quo natus quisquam modi optio unde doloribus, tempora, dolore? Doloremque, nam, laudantium. <a href="#">link test</a></p>
+      </div>
+      <h3 class="flextabs__tab"><a href="#" class="flextabs__toggle">Toggle</a></h3>
+      <div class="flextabs__content">
+        <p>Ut assumenda dolorem, veritatis accusamus eaque dicta, cupiditate, perferendis nemo corporis minima tenetur laboriosam iste impedit delectus quod. Qui facere ducimus soluta hic consequatur repellendus nostrum dolores animi architecto, cum vitae perferendis sunt quibusdam tempore veniam. Eaque rem deserunt earum ex odio soluta iste harum suscipit totam a. <a href="#">link test</a></p>
+      </div>
+      <a href="#" class="flextabs__tab flextabs__toggle">Toggle</a>
+      <div class="flextabs__content">
         <p>Modi laboriosam non, aliquid expedita dolor illum blanditiis dignissimos mollitia, corrupti! Tempore, sint molestias! Explicabo dignissimos modi laboriosam nulla corporis eaque ratione ea deserunt, minima dolores praesentium amet tempora at laborum repellat quasi asperiores quae voluptatum fuga atque maxime nostrum doloribus optio earum? Numquam, tempore enim! Libero, natus! <a href="#">link test</a></p>
       </div>
     </div>
